Bug 1941754 - Realign Highlights section so that top Price icon is not truncated r=shopping-reviewers,kpatenio
Differential Revision: https://phabricator.services.mozilla.com/D234351

--- a/browser/components/shopping/content/highlight-item.css
+++ b/browser/components/shopping/content/highlight-item.css
@@ -4,7 +4,6 @@
 
 /* Separate logo, label and details into rows and columns */
 .highlight-item-wrapper {
-  align-items: center;
   display: grid;
   column-gap: 1em;
   grid-template-columns: 1rem auto;
